<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true" >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5pt"
            android:layout_marginTop="5pt"
            android:text="@string/server_text"
            />
        <EditText
            android:id="@+id/Server"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:inputType="textUri"
            />
        <TextView
            android:id="@+id/textView1W"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Server"
            android:layout_marginLeft="5pt"
            android:layout_marginTop="5pt"
            android:text="@string/server_wifi_text"
            />
        <EditText
            android:id="@+id/ServerW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1W"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:inputType="textUri"
            />
        <TextView
            android:id="@+id/textViewWS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ssid"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10pt"
            android:text="@string/wifi_ssid_text"
            />
        <EditText
            android:id="@+id/ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ServerW"
            android:layout_marginLeft="5pt"
            android:layout_marginRight="5pt"
            android:layout_marginTop="3pt"
            android:layout_toRightOf="@id/textViewWS"
            android:inputType="text"
            />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/spinner1"
            android:layout_below="@+id/ssid"
            android:layout_marginLeft="5pt"
            android:text="@string/update_time_text"
            />
        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ssid"
            android:layout_marginLeft="5pt"
            android:layout_marginTop="6pt"
            android:layout_toRightOf="@+id/textView2"
            android:prompt="@string/time_prompt"
            />
        <Button
            android:id="@+id/Save1"
            android:layout_width="40pt"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner1"
            android:layout_marginLeft="5pt"
            android:layout_marginTop="5pt"
            android:text="@string/save_text"
            />
        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/Save1"
            android:layout_marginBottom="5pt"
            android:layout_marginLeft="2pt"
            android:layout_marginRight="2pt"
            android:layout_marginTop="7pt"
            android:background="#ff0099cc"
            />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/onBoot"
            android:layout_marginLeft="5pt"
            android:text="@string/start_on_boot_text"
            />
        <CheckBox
            android:id="@+id/onBoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line1"
            android:layout_marginLeft="10pt"
            android:layout_toRightOf="@id/textView4"
            />
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/notification"
            android:layout_marginLeft="5pt"
            android:text="@string/notification_text"
            />
        <CheckBox
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/onBoot"
            android:layout_marginLeft="10pt"
            android:layout_toRightOf="@id/textView4"
            />
        <TextView
            android:id="@+id/ANDROID_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notification"
            android:layout_marginLeft="5pt"
            android:layout_marginTop="10pt"
            android:text="@string/android_id_text"
            />
        <View
            android:id="@+id/space1"
            android:layout_width="wrap_content"
            android:layout_height="10pt"
            android:layout_below="@+id/ANDROID_ID"
            />
    </RelativeLayout>
</ScrollView>
